api/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: symbols-api
spec:
  replicas: 3
  selector:
    matchLabels:
      application: symbols
      type: api
  progressDeadlineSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 34%
  template:
    metadata:
      labels:
        application: symbols
        type: api
    spec:
      containers:
        - name: api
          image: lfyuomrgylo/symbols-api
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
