api/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: symbols-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: symbols-registry.com
      http:
        paths:
          - path: /
            backend:
              serviceName: symbols-api
              servicePort: 8080
